{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 120,
  "lineage": "21296666-d29e-31fe-7e28-71e4f87edf25",
  "resources": [
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0333305f9719618c7",
            "arn": "arn:aws:ec2:eu-west-1:077839647469:instance/i-01fd25e3a16392607",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01fd25e3a16392607",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh_1-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-072a22e12810ffce8",
            "private_dns": "ip-10-0-10-71.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.71",
            "public_ip": "34.247.23.116",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0833e82fef54b92f7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09451af8d6b913942",
            "tags": {
              "Name": "MyPC"
            },
            "tags_all": {
              "Name": "MyPC"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-062708f4235fc7ccc"
            ]
          },
          "dependencies": [
            "module.instances.aws_key_pair.ssh_1",
            "module.network.aws_security_group.sg_web",
            "module.network.aws_subnet.subnet_a",
            "module.network.aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "instance1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f82b2799f8a4bf1f",
            "association_id": "eipassoc-060173beae19aa83b",
            "domain": "vpc",
            "id": "eipalloc-0f82b2799f8a4bf1f",
            "instance": "i-01fd25e3a16392607",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-072a22e12810ffce8",
            "private_dns": "ip-10-0-10-71.eu-west-1.compute.internal",
            "private_ip": "10.0.10.71",
            "public_dns": "ec2-34-247-23-116.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.247.23.116",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.instances.aws_instance.web_1",
            "module.instances.aws_key_pair.ssh_1",
            "module.network.aws_security_group.sg_web",
            "module.network.aws_subnet.subnet_a",
            "module.network.aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:077839647469:internet-gateway/igw-080075f345fdccfde",
            "id": "igw-080075f345fdccfde",
            "owner_id": "077839647469",
            "vpc_id": "vpc-0f989ab5ec68b81e5"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "route_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-080075f345fdccfde",
            "id": "r-rtb-08177de03a12354b91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08177de03a12354b9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.gw_1",
            "module.network.aws_route_table.def_route_1",
            "module.network.aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "def_route_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:077839647469:route-table/rtb-08177de03a12354b9",
            "id": "rtb-08177de03a12354b9",
            "owner_id": "077839647469",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-080075f345fdccfde",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f989ab5ec68b81e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f30c36b4b236f67",
            "route_table_id": "rtb-08177de03a12354b9",
            "subnet_id": "subnet-09451af8d6b913942"
          },
          "dependencies": [
            "module.network.aws_route_table.def_route_1",
            "module.network.aws_subnet.subnet_a",
            "module.network.aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:077839647469:security-group/sg-062708f4235fc7ccc",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-062708f4235fc7ccc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_web",
            "name_prefix": "",
            "owner_id": "077839647469",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "TLS"
            },
            "tags_all": {
              "Name": "TLS"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f989ab5ec68b81e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:077839647469:subnet/subnet-09451af8d6b913942",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09451af8d6b913942",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "077839647469",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0f989ab5ec68b81e5"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:077839647469:vpc/vpc-0f989ab5ec68b81e5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-011b11adf8c435acc",
            "default_route_table_id": "rtb-0c1e56401f879594b",
            "default_security_group_id": "sg-00e0944a1581c97d9",
            "dhcp_options_id": "dopt-090981eb647dc7ba3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f989ab5ec68b81e5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c1e56401f879594b",
            "owner_id": "077839647469"
          }
        }
      ]
    }
  ]
}